--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,30 @@
 asgiref==3.8.1
 attrs==25.3.0
+contourpy==1.3.2
+cycler==0.12.1
 Django==5.2.3
 djangorestframework==3.16.0
 djangorestframework_simplejwt==5.5.0
 drf-spectacular==0.28.0
+fonttools==4.58.5
 inflection==0.5.1
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
+matplotlib==3.10.3
+numpy==2.3.1
+packaging==25.0
+pandas==2.3.0
+pillow==11.3.0
 PyJWT==2.9.0
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
 rpds-py==0.26.0
 simplejwt==2.0.1
+six==1.17.0
 sqlparse==0.5.3
 typing==3.7.4.3
 typing_extensions==4.14.0
